[project]
name = "chiya"
version = "0.1.0"
description = "A moderation-heavy general purpose Discord bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "arrow>=1.3.0",
    "discord-ext-menus>=1.1",
    "discord-py[speed]==2.5.2",
    "loguru==0.7.3",
    "parsedatetime==2.6",
    "privatebinapi==1.0.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
